Bug 73578 - egl_pipe.c:46:38: fatal error: radeonsi/radeonsi_public.h: No such file or directory
Summary: egl_pipe.c:46:38: fatal error: radeonsi/radeonsi_public.h: No such file or di...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-01-13 23:34 UTC by Vinson Lee
Modified: 2014-01-14 00:06 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-01-13 23:34:36 UTC
mesa: aa7ae4fd6e24ba7f2b687e3f3c4301919830750b (master)

$ scons
[...]
  Compiling src/gallium/targets/egl-static/egl_pipe.c ...
src/gallium/targets/egl-static/egl_pipe.c:46:38: fatal error: radeonsi/radeonsi_public.h: No such file or directory
 #include "radeonsi/radeonsi_public.h"
                                      ^
compilation terminated.
Comment 1 Vinson Lee 2014-01-13 23:36:39 UTC
786af2f963925df2c2a6fb60b29a83e8340f03c7 is the first bad commit
commit 786af2f963925df2c2a6fb60b29a83e8340f03c7
Author: Andreas Hartmetz <ahartmetz@gmail.com>
Date:   Sat Jan 4 18:44:33 2014 +0100

    radeonsi: Apply si_* file naming scheme.
    
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>

:040000 040000 d05e480d033201d725c16b7cb392b536538837ed 864adcad0405ebe443285fd74c24612fa4ae287d M	src
bisect run success
Comment 2 Vinson Lee 2014-01-14 00:06:05 UTC
commit 8f9b70fa3c41418bc2b28551642ea786ed0c2e79
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Mon Jan 13 15:51:50 2014 -0800

    egl-static: Fix build error.
    
    Fix build regression introduced with commit
    786af2f963925df2c2a6fb60b29a83e8340f03c7.
    
    egl_pipe.c:46:38: fatal error: radeonsi/radeonsi_public.h: No such file or directory
     #include "radeonsi/radeonsi_public.h"
                                          ^
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73578
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
vinson@vinson-ubuntu:~/workspace/mesa$


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.